--- a/index.html
+++ b/index.html
@@ -31,9 +31,12 @@
             </ul>
         </div>
     </nav>
+    <div class="row">
+        <div class="col-md-12" style="background-color:#4aaaa5; height: 5px;"> </div>
+    </div>
     <div class="container">
         <div class="row">
-            <div class="col-md-10" style="background-color: #ffffff; padding: 20px;">
+            <div class="col-md-10" style="background-color: #ffffff; padding: 20px; margin:20px;">
                 <div class="row">
                     <div class="col-md-12">
                         <h1 style="color:#4aaaa5; border-bottom: solid 2px #666666; padding: 10px">About Me</h1>
@@ -73,7 +76,19 @@
             </div>
         </div>
     </div>
-
+    <footer>
+        <div class="fixed-bottom">
+            <div class="row">
+                <div class="col-md-12" style="background-color:#4aaaa5; height: 5px;"> </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12" style="background-color:#777777; height: 40px;">
+                    <h6 style="font-size: x-small; color:#ffffff; padding-top:26px; text-align: center">Copyright
+                        &copy;</h6>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
