--- a/contact.html
+++ b/contact.html
@@ -1,34 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>About| Zach Merel</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>About| Zach Merel</title>
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Zach Merel</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="portfolio.html">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-          </ul>
+
+<body style="background-image:url(/Bootstrap-Portfolio/images/dark_Tire_@2X.png);">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Zach Merel</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="row">
+    <div class="col-md-12" style="background-color:#4aaaa5; height: 5px;"> </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-10" style="background-color: #ffffff; padding: 20px; margin:20px;">
+        <div class="row">
+          <div class="col-md-12">
+            <h1 style="color:#4aaaa5; border-bottom: solid 2px #666666; padding: 10px">Contact</h1>
+          </div>
         </div>
-      </nav>
+        <div class="row">
+          <div class="col-md-12">
+            <h5 style="color:#666666; padding-top: 10px;">Name</h5>
+          </div>
+        </div>
+        <div style="padding-top: 10px" class="input-group mb-3">
+          <input type="text" class="form-control" placeholder="Zach Merel" aria-label="Recipient's username"
+            aria-describedby="basic-addon2">
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <h5 style="color:#666666; padding-top: 10px;">Email</h5>
+          </div>
+        </div>
+        <div style="padding-top: 10px" class="input-group mb-3">
+          <input type="text" class="form-control" placeholder="zachmerel@gmail.com" aria-label="Recipient's username"
+            aria-describedby="basic-addon2">
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <h5 style="color:#666666; padding-top: 10px;">Message</h5>
+          </div>
+        </div>
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <!-- <span class="input-group-text"></span> -->
+          </div>
+          <textarea class="form-control" aria-label="With textarea"></textarea>
+        </div>
+        <div class="row" style="padding-top: 15px;">
+            <button class="btn btn-light" style="background-color:#4aaaa5; color:#ffffff; margin-left: 12px;" type="button">Submit</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <footer>
+    <div class="fixed-bottom">
+      <div class="row">
+        <div class="col-md-12" style="background-color:#4aaaa5; height: 5px;"> </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12" style="background-color:#777777; height: 40px;">
+          <h6 style="font-size: x-small; color:#ffffff; padding-top:26px; text-align: center">Copyright
+            &copy;</h6>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
 </html>
