--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title>About| Zach Merel</title>
+  <title>Contact| Zach Merel</title>
 </head>
 
 <body style="background-image:url(/Bootstrap-Portfolio/images/dark_Tire_@2X.png);">
