--- a/portfolio.html
+++ b/portfolio.html
@@ -1,34 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>About| Zach Merel</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>Portfolio| Zach Merel</title>
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Zach Merel</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="portfolio.html">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-          </ul>
+
+<body style="background-image:url(/Bootstrap-Portfolio/images/dark_Tire_@2X.png);">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Zach Merel</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span> </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="portfolio.html">Portfolio </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="row">
+    <div class="col-md-12" style="background-color:#4aaaa5; height: 5px;"> </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-10" style="background-color: #ffffff; padding: 20px; margin:20px;">
+        <div class="row">
+          <div class="col-md-12">
+            <h1 style="color:#4aaaa5; border-bottom: solid 2px #666666; padding: 10px; margin-bottom: 20px;">Portfolio</h1>
+          </div>
         </div>
-      </nav>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card bg-dark text-white">
+              <img class="card-img" src="images/android-wallpaper-art-backlit-1114897.jpg" alt="Card image" style="width: 170; height: auto;">
+              <div class="card-img-overlay">
+                <h5 style="background-color:#4aaaa5; text-align:center; padding: 10px">Word Guess</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card bg-dark text-white">
+              <img class="card-img" src="images/android-wallpaper-art-backlit-1114897.jpg" alt="Card image" style="width: 170; height: auto;">
+              <div class="card-img-overlay">
+                <h5 style="background-color:#4aaaa5; text-align:center; padding: 10px">Word Guess</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row" style="margin-top: 20px;">
+          <div class="col-md-4">
+            <div class="card bg-dark text-white">
+              <img class="card-img" src="images/android-wallpaper-art-backlit-1114897.jpg" alt="Card image" style="width: 170; height: auto;">
+              <div class="card-img-overlay">
+                <h5 style="background-color:#4aaaa5; text-align:center; padding: 10px">Word Guess</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card bg-dark text-white">
+              <img class="card-img" src="images/android-wallpaper-art-backlit-1114897.jpg" alt="Card image" style="width: 170; height: auto;">
+              <div class="card-img-overlay">
+                <h5 style="background-color:#4aaaa5; text-align:center; padding: 10px">Word Guess</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row" style="margin-top: 20px; margin-bottom: 20px;">
+            <div class="col-md-4">
+              <div class="card bg-dark text-white">
+                <img class="card-img" src="images/android-wallpaper-art-backlit-1114897.jpg" alt="Card image" style="width: 170; height: auto;">
+                <div class="card-img-overlay">
+                  <h5 style="background-color:#4aaaa5; text-align:center; padding: 10px">Word Guess</h5>
+                </div>
+              </div>
+            </div>
+        </div>    
+      </div>
+    </div>
+  </div>
+
+  <footer>
+    <div class="fixed-bottom">
+      <div class="row">
+        <div class="col-md-12" style="background-color:#4aaaa5; height: 5px;"> </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12" style="background-color:#777777; height: 40px;">
+          <h6 style="font-size: x-small; color:#ffffff; padding-top:26px; text-align: center">Copyright
+            &copy;</h6>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
 </html>
