Everything good except portfolio page text on images and 640px view

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-md-10" style="background-color: #ffffff; padding: 20px; margin:20px;">
+            <div class="col-md-12" style="background-color: #ffffff; padding: 20px; margin-top:20px;">
                 <div class="row">
                     <div class="col-md-12">
                         <h1 style="color:#4aaaa5; border-bottom: solid 2px #666666; padding: 10px">About Me</h1>
