--- a/portfolio.html
+++ b/portfolio.html
@@ -19,11 +19,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item active">
+        <li class="nav-item ">
           <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span> </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="portfolio.html">Portfolio </a>
+        <li class="nav-item active">
+          <a class="nav-link " href="portfolio.html">Portfolio </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
@@ -36,7 +36,8 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-md-10" style="background-color: #ffffff; padding: 20px; margin:20px;">
+    
+      <div class= "col-md-12" style="background-color: #ffffff; padding: 20px; margin:20px;">
         <div class="row">
           <div class="col-md-12">
             <h1 style="color:#4aaaa5; border-bottom: solid 2px #666666; padding: 10px; margin-bottom: 20px;">Portfolio</h1>
@@ -47,7 +48,7 @@
             <div class="card bg-dark text-white">
               <img class="card-img" src="images/android-wallpaper-art-backlit-1114897.jpg" alt="Card image" style="width: 170; height: auto;">
               <div class="card-img-overlay">
-                <h5 style="background-color:#4aaaa5; text-align:center; padding: 10px">Word Guess</h5>
+                <h5 style="background-color:#4aaaa5; text-align:center; padding: 10px; width: 170;">Word Guess</h5>
               </div>
             </div>
           </div>
@@ -55,7 +56,7 @@
             <div class="card bg-dark text-white">
               <img class="card-img" src="images/android-wallpaper-art-backlit-1114897.jpg" alt="Card image" style="width: 170; height: auto;">
               <div class="card-img-overlay">
-                <h5 style="background-color:#4aaaa5; text-align:center; padding: 10px">Word Guess</h5>
+                <h5 style="background-color:#4aaaa5; text-align:center; padding: 10px">RPG Game</h5>
               </div>
             </div>
           </div>
@@ -65,7 +66,7 @@
             <div class="card bg-dark text-white">
               <img class="card-img" src="images/android-wallpaper-art-backlit-1114897.jpg" alt="Card image" style="width: 170; height: auto;">
               <div class="card-img-overlay">
-                <h5 style="background-color:#4aaaa5; text-align:center; padding: 10px">Word Guess</h5>
+                <h5 style="background-color:#4aaaa5; text-align:center; padding: 10px">Trivia Game</h5>
               </div>
             </div>
           </div>
@@ -73,22 +74,23 @@
             <div class="card bg-dark text-white">
               <img class="card-img" src="images/android-wallpaper-art-backlit-1114897.jpg" alt="Card image" style="width: 170; height: auto;">
               <div class="card-img-overlay">
-                <h5 style="background-color:#4aaaa5; text-align:center; padding: 10px">Word Guess</h5>
+                <h5 style="background-color:#4aaaa5; text-align:center; padding: 10px;">Rutgers Info Widget</h5>
               </div>
             </div>
           </div>
         </div>
         <div class="row" style="margin-top: 20px; margin-bottom: 20px;">
-            <div class="col-md-4">
-              <div class="card bg-dark text-white">
-                <img class="card-img" src="images/android-wallpaper-art-backlit-1114897.jpg" alt="Card image" style="width: 170; height: auto;">
-                <div class="card-img-overlay">
-                  <h5 style="background-color:#4aaaa5; text-align:center; padding: 10px">Word Guess</h5>
-                </div>
+          <div class="col-md-4">
+            <div class="card bg-dark text-white">
+              <img class="card-img" src="images/android-wallpaper-art-backlit-1114897.jpg" alt="Card image" style="width: 170; height: auto;">
+              <div class="card-img-overlay">
+                <h5 style="background-color:#4aaaa5; text-align:center; padding: 10px">Rock Paper Scissors</h5>
               </div>
             </div>
-        </div>    
+          </div>
+        </div>
       </div>
+      
     </div>
   </div>
 
