fixed image overlay padding. Finished project.homework.

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,60 +36,62 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class= "col-md-12" style="background-color: #ffffff; padding: 20px; margin:20px;">
+      <div class="col-md-12" style="background-color: #ffffff; padding: 20px; margin:20px;">
         <div class="row">
           <div class="col-md-12">
             <h1 style="color:#4aaaa5; border-bottom: solid 2px #666666; padding: 20px; margin-bottom: 20px;">Portfolio</h1>
           </div>
         </div>
-        <div class="row" >
+        <div class="row">
           <div class="col-md-4" style="margin-top: 20px;">
             <div class="card bg-dark text-white">
-              <img class="card-img" src="images/android-wallpaper-art-backlit-1114897.jpg" alt="Card image" >
-              <div class="card-img-overlay  h-100 d-flex flex-column justify-content-end">
-                <p style="background-color:#4aaaa5; text-align:center; padding: 5px; width: 170;"><strong>Word Guess</strong> </p>
+              <img class="card-img" src="images/android-wallpaper-art-backlit-1114897.jpg" alt="Card image">
+              <div class="card-img-overlay  h-100 d-flex flex-column justify-content-end" style="padding-left: 0px;padding-right: 0px;">
+                <p style="background-color:#4aaaa5; text-align:center; padding: 5px; width: 170;"><strong>Word Guess</strong>
+                </p>
               </div>
             </div>
           </div>
-          <div class="col-md-4" style="margin-top: 20px;" >
+          <div class="col-md-4" style="margin-top: 20px;">
             <div class="card bg-dark text-white">
-              <img class="card-img" src="images/android-wallpaper-art-backlit-1114897.jpg" alt="Card image" style="width: 170; height: auto;">
-              <div class="card-img-overlay  h-100 d-flex flex-column justify-content-end">
-                <p style="background-color:#4aaaa5; text-align:center; padding: 5px"><strong>RPG Game</strong> </p>
+              <img class="card-img" src="images/android-wallpaper-art-backlit-1114897.jpg" alt="Card image" style=" height: auto;">
+              <div class="card-img-overlay  h-100 d-flex flex-column justify-content-end" style="padding-left: 0px;padding-right: 0px;">
+                <p style="background-color:#4aaaa5; text-align:center; padding: 5px;"><strong>RPG Game</strong> </p>
               </div>
             </div>
           </div>
         </div>
-        <div class="row" >
+        <div class="row">
           <div class="col-md-4" style="margin-top: 20px;">
             <div class="card bg-dark text-white">
               <img class="card-img" src="images/android-wallpaper-art-backlit-1114897.jpg" alt="Card image" style="width: 170; height: auto;">
-              <div class="card-img-overlay  h-100 d-flex flex-column justify-content-end">
+              <div class="card-img-overlay  h-100 d-flex flex-column justify-content-end" style="padding-left: 0px;padding-right: 0px;">
                 <p style="background-color:#4aaaa5; text-align:center; padding: 5px"><strong>Trivia Game</strong> </p>
               </div>
             </div>
           </div>
-          <div class="col-md-4" style="margin-top: 20px;" >
+          <div class="col-md-4" style="margin-top: 20px;">
             <div class="card bg-dark text-white">
               <img class="card-img" src="images/android-wallpaper-art-backlit-1114897.jpg" alt="Card image" style="width: 170; height: auto;">
-              <div class="card-img-overlay  h-100 d-flex flex-column justify-content-end">
+              <div class="card-img-overlay  h-100 d-flex flex-column justify-content-end" style="padding-left: 0px;padding-right: 0px;">
                 <p style="background-color:#4aaaa5; text-align:center; padding: 5px;"><strong>Rutgers Info Widget</strong></p>
               </div>
             </div>
           </div>
         </div>
-        <div class="row" >
+        <div class="row">
           <div class="col-md-4" style="margin-top: 20px; margin-bottom: 20px;">
             <div class="card bg-dark text-white">
               <img class="card-img" src="images/android-wallpaper-art-backlit-1114897.jpg" alt="Card image" style="width: 170; height: auto;">
-              <div class="card-img-overlay h-100 d-flex flex-column justify-content-end">
-                <p style="background-color:#4aaaa5; text-align:center; padding: 5px"><strong> Rock Paper Scissors </strong></p>
+              <div class="card-img-overlay h-100 d-flex flex-column justify-content-end" style="padding-left: 0px;padding-right: 0px;">
+                <p style="background-color:#4aaaa5; text-align:center; padding: 5px"><strong> Rock Paper Scissors
+                  </strong></p>
               </div>
             </div>
           </div>
         </div>
       </div>
-      
+
     </div>
   </div>
 
